@@ -1,6 +1,6 @@
 # $Header$
 
-Glib version 1.120
+Glib version 1.130
 ==================
 
 This module provides perl access to Glib and GLib's GObject libraries.
