@@ -1,3 +1,3 @@
-Copyright (C) 2003-2005 by the gtk2-perl team.
+Copyright (C) 2003-2006 by the gtk2-perl team.
 
 This software is licensed under the LGPL.  See L<Glib> for a full notice.
